# Neural-library-plus-plus

./: .gitignore  CMakeLists.txt  README.md
clr_wrap/: clr_wrap.sln
clr_wrap/clr_wrapper/: AssemblyInfo.cpp  TrainingData.cpp  TrainingData.h  WSimpleNetwork.cpp  WSimpleNetwork.h  clr_wrapper.vcxproj  clr_wrapper.vcxproj.filters  utils.h
clr_wrap/nnl_clr/: TrainingData.cpp  TrainingData.h  WSimpleNetwork.cpp  WSimpleNetwork.h  nnl_clr.filters  nnl_clr.vcxproj  utils.h
clr_wrap/wpf_test/: MainWindow.xaml  MainWindow.xaml.cs  wpf_test.csproj
clr_wrap/wpf_test/Custom elements/: CustomInkCanvas.cs
clr_wrap/wpf_test/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: main.cpp
src/math/: neuron_functions.cpp  neuron_functions.h  random_element.h  stringable.cpp  stringable.h  vec.h  vec.tpp
src/neural_core/: data_saver.h  data_saver.tpp  simple_data.cpp  simple_data.h  simple_network.cpp  simple_network.h
src/neural_core/simple_network/: simple_network.cpp  simple_network.h  simple_trainer.cpp  simple_trainer.h
src/neural_core/trainer/: adam_trainer.cpp  adam_trainer.h  network_trainer.h  simple_trainer.cpp  simple_trainer.h
testing/: main.cpp
testing/tests/mnist/: .gitignore  network_backup.b
testing/tests/xor/: network_structure.b  train_data.b
utils/npy_to_traindata/: main.cpp
